--- a/api/composer.json
+++ b/api/composer.json
@@ -15,12 +15,12 @@
         "cahkampung/landa-php": "*",
         "slim/twig-view": "2.5.0",
         "friendsofphp/php-cs-fixer": "^2.17@dev",
-        "google/cloud-firestore": "dev-master",
         "phpoffice/phpspreadsheet": "1.12.0",
         "kreait/firebase-php": "^5.0@dev",        
         "tecnickcom/tcpdf": "^6.2",
         "phpmailer/phpmailer": "dev-master",
-        "dompdf/dompdf": "^0.8.2"
+        "dompdf/dompdf": "^0.8.2",
+        "grpc/grpc": "^1.38"
     },
     "autoload": {
         "psr-4": {
