--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sass-loader": "^7.2.0",
     "sweetalert2": "^9.7.1",
     "tslib": "^1.10.0",
+    "xlsx": "^0.17.4",
     "yarn": "^1.22.10",
     "zone.js": "~0.10.2"
   },
